fix parallax jitter on mobile

--- a/home/static/css/wedding.css
+++ b/home/static/css/wedding.css
@@ -5,15 +5,13 @@ body{
 
 h1{
     font-family: 'Poppins', sans-serif;
-    /* text-shadow: -0.05em 0.05em rgb(158, 168, 218), -0.1em 0.1em rgb(84, 96, 230), -0.15em 0.15em rgb(29, 43, 197), -0.2em 0.2em rgb(7, 16, 118); */
     font-size: 10em;
-    font-weight: 900;
+    font-weight: 700;
     text-align: center;
 }
 h2{
     text-align: center;
 	font-family: 'Poppins', sans-serif;
-    /* text-shadow: -0.1em 0.1em rgb(84, 96, 230), -0.2em 0.2em rgb(7, 16, 118); */
     font-size: 2em;
     font-weight: 700;
 }
@@ -23,7 +21,7 @@ h2{
     color: rgb(0, 0, 0);
 	font-family: 'Poppins', sans-serif;
 	font-size: 1.5em;
-    font-weight: 900;
+    font-weight: 700;
     margin-left: 15px;
     margin-right: 25px;
     padding: 2%;
@@ -42,7 +40,7 @@ h2{
 }
 .container form label{
     display:block;
-    font-weight:900;
+    font-weight:700;
     margin-bottom:6px;
     color:inherit
 }
@@ -66,7 +64,7 @@ h2{
     color:#fff;
     border:2px solid #000;
     padding:10px 18px;
-    font-weight:900;
+    font-weight:700;
     font-family:inherit;
     border-radius:6px;
     cursor:pointer
@@ -76,7 +74,7 @@ h2{
 }
 .container form input::placeholder{
     color:#666;
-    font-weight:900
+    font-weight:700
 }
 
 
